--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -99,3 +99,4 @@ aaa: 你好
 dice_auto_bet_auto_bet_start: 自动投注开始
 dice_auto_bet_auto_bet_end: 自动投注结束
 plinko_maximum_auto_bet_number: "Maximum is \"999999999\""
+plinko_copyId_share: 分享到聊天室
