--- a/locales/th-TH.yml
+++ b/locales/th-TH.yml
@@ -1,4 +1,3 @@
-
 dice_auto_bet_auto_bet_end: สิ้นสุดการเดิมพันอัตโนมัติ
 dice_auto_bet_auto_bet_start: เริ่มต้นการเดิมพันอัตโนมัติ
 plinko_after_bet_pop_up_risk_level_1: level1
@@ -8,7 +7,7 @@ plinko_amount: จำนวนเงินเดิมพัน
 plinko_animation: อนิเมชั่น
 plinko_auto: เดิมพันอัตโนมัติ
 plinko_autobetalert1: เริ่มต้นเดิมพันอัตโนมัติ
-plinko_autobetalert2: เดิมพันอัตโนมัติสมบูรณ์
+plinko_autobetalert2: เดิมพันอัตโนมัติสำเร็จ
 plinko_autobetstart: เริ่มการเดิมพันอัตโนมัติ
 plinko_autobetstop: หยุดการเดิมพันอัตโนมัติ
 plinko_bet: เดิมพัน
@@ -104,3 +103,4 @@ plinko_verifyTexts_clientSeed: ลูกค้า Seeds
 plinko_verifyTexts_game: เกม
 plinko_verifyTexts_nonce: สัญญาณที่เกิดขึ้นจริง
 plinko_verifyTexts_serverSeed: บริการ Seeds
+plinko_copyId_share: 分享到聊天室
