--- a/locales/vi-VN.yml
+++ b/locales/vi-VN.yml
@@ -8,7 +8,7 @@ plinko_animation: Hoạt hình
 plinko_auto: Tự độn
 plinko_autobetalert1: Thành công
 plinko_autobetalert2: Đặt cược tự động hoàn tất
-plinko_autobetstart: Bắt đầu đặt cược tự động
+plinko_autobetstart: Bắt Đầu Cược Tự Động
 plinko_autobetstop: Dừng đặt cược tự động
 plinko_bet: Cược
 plinko_betNumbers: Số Cược
@@ -82,7 +82,7 @@ plinko_scoreboard_multi: Hệ số
 plinko_scoreboard_on: bật
 plinko_scoreboard_payout: Thanh toán
 plinko_scoreboard_play: Chơi Plinko
-plinko_scoreboard_provable: Sự công bằng có thể chứng minh được
+plinko_scoreboard_provable: Chắc Chắn Công Bằng
 plinko_scoreboard_time: 'Đặt bởi:'
 plinko_showPro_chance: Tỉ Lệ
 plinko_showPro_profit: Lợi Nhuận Khi Thắng
