--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -50,8 +50,8 @@ plinko_left2: "Wagered"
 plinko_right1: "Wins"
 plinko_right2: "Losses"
 plinko_max: "Maximum"
-plinko_autobetalert1: "Automatic betting starts"
-plinko_autobetalert2: "Automatic betting completed"
+plinko_autobetalert1: "Autobet Started"
+plinko_autobetalert2: "Autobet Finished"
 plinko_betamountalert: "Your bet cannot be greater than your balance!"
 plinko_tooltip1: "Game Settings"
 plinko_tooltip2: "Enable theater mode"
