--- a/locales/vi-VN.yml
+++ b/locales/vi-VN.yml
@@ -5,7 +5,7 @@ plinko_after_bet_pop_up_risk_level_2: Trung bình
 plinko_after_bet_pop_up_risk_level_3: level3
 plinko_amount: Số Tiền Cược
 plinko_animation: Hoạt hình
-plinko_auto: Tự độn
+plinko_auto: Tự động
 plinko_autobetalert1: Thành công
 plinko_autobetalert2: Đặt cược tự động hoàn tất
 plinko_autobetstart: Bắt Đầu Cược Tự Động
